--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Understanding TypeScript</title>
-    <script
-      async
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA4x52pmuObcHVSSSJed1pGesvu-K5Velo"
-    ></script>
+    <script async src="https://maps.googleapis.com/maps/api/js?key="></script>
     <script src="dist/bundle.js" defer></script>
     <link rel="stylesheet" href="app.css" />
   </head>
